<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".AddItemToArrayList"

>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addItem_activityTitle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/addItem_activityTextSize"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <TextView
            android:id="@+id/foodName_label"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodName_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/add_item_textsize"
            android:layout_gravity="end"

            />

        <EditText
            android:id="@+id/foodName_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/app_name"
            android:inputType="text"
             />


        <TextView
            android:id="@+id/foodDescription_label"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodDescription_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/add_item_textsize"
            android:layout_gravity="end"
           />

        <EditText
            android:id="@+id/foodDescription_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/foodDescription_label"
            android:inputType="text"
             />

        <TextView
            android:id="@+id/ingredients_label"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/add_item_textsize"
            android:layout_gravity="end"

            />

        <EditText
            android:id="@+id/ingredients_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/ingredients_label"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/calories_label"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/add_item_textsize"
            android:layout_gravity="end"

            />

        <EditText
            android:id="@+id/calories_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/calories_label"
            android:inputType="number"
             />

        <TextView
            android:id="@+id/link_label"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/add_item_textsize"
            android:layout_gravity="end"
            />

        <EditText
            android:id="@+id/link_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/link_label"
            android:inputType="text"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_button"
                android:onClick="createNewItem"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit_button"
                android:textSize="@dimen/add_item_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </GridLayout>
</ScrollView>